made pages for different users

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 
 #root {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
   font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", Roboto, Ubuntu, sans-serif;
+  overflow-x: hidden;
 }
